--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ hs_err_pid*
 /01_EjemploJava/nbproject/private/
 /01_EjemploJava/build/
 /01_EjemploJava/dist/
+/02_EjemplosHTML5_raul/nbproject/private/
+/PruebaHilosPractica/nbproject/private/
