--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ hs_err_pid*
 /01_EjemploJava/dist/
 /02_EjemplosHTML5_raul/nbproject/private/
 /PruebaHilosPractica/nbproject/private/
+/PruebaHilosPractica/build/
