--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ hs_err_pid*
 /03_WebServlets/nbproject/private/
 /03_WebServlets/build/
 /03_WebServlets/dist/
+/04_Ejemplo_MVC_JSP_raul/nbproject/private/
+/04_Ejemplo_MVC_JSP_raul/build/
