--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ hs_err_pid*
 /03_WebServlets/dist/
 /04_Ejemplo_MVC_JSP_raul/nbproject/private/
 /04_Ejemplo_MVC_JSP_raul/build/
+/04_Ejemplo_MVC_JSP_raul_1/nbproject/private/
