--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ hs_err_pid*
 /04_Ejemplo_MVC_JSP_raul/nbproject/private/
 /04_Ejemplo_MVC_JSP_raul/build/
 /04_Ejemplo_MVC_JSP_raul_1/nbproject/private/
+/04_Ejemplo_MVC_JSP_RaulMaria/nbproject/private/
