--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ hs_err_pid*
 /05_CRUD_JSTL_DAO/nbproject/private/
 /05_CRUD_Modelo_dao/nbproject/private/
 /05_CRUD_Modelo_dao/build/
+/05_CRUD_Vista_JSTL_raul/nbproject/private/
+/05_CRUD_Modelo_DAO/nbproject/private/
+/05_CRUD_Modelo_DAO_raul/nbproject/private/
+/05_CRUD_Modelo_DAO_raul/build/
+/05_CRUD_Modelo_DAO_raul/dist/
+/05_CRUD_Vista_JSTL_raul/build/
+/05_CRUD_Vista_JSTL_raul/dist/
